@@ -7,9 +7,9 @@ use strict;
 use lib 't';
 use TestLib;
 
-use Test::More tests => ($#MAJORS == 0) ? 1 : (23 + $#MAJORS * 9);
+use Test::More tests => (@MAJORS == 1) ? 1 : (12 + @MAJORS * 9);
 
-if ($#MAJORS == 0) {
+if (@MAJORS == 1) {
     pass 'only one major version installed, skipping upgrade tests';
     exit 0;
 }
