@@ -5,7 +5,7 @@ use strict;
 use lib 't';
 use TestLib;
 use PgCommon;
-use Test::More tests => 8 * ($#MAJORS+2);
+use Test::More tests => 8 * (@MAJORS + 1);
 
 my $multiarch = '';
 unless ($PgCommon::rpm) {
