@@ -7,7 +7,7 @@ use TestLib;
 
 my $version = $MAJORS[0];
 
-use Test::More tests => 30;
+use Test::More tests => 28;
 
 # prepare nobody-owned root dir for $PG_CLUSTER_CONF_ROOT
 my $rootdir=`su -s /bin/sh -c 'mktemp -d' nobody`;
